2.3 - ?
	- No page reload needed when changing rlist status from vn page
	- Random VN quotes to the footer of every page
	- Fixed case-sensitivity for BBCode
	- Homepage shows platform icons for releases
	- Don't show deleted items on /u+ recent changes
	- Catalog number field to release entries

2.2 - 2009-01-16
	- Additional custom CSS field to user profile
	- Search dropdown calls the return function automatically on select
	- Revised the media list
	- Added a checkbox to releases to indicate a patch
	- VN popularity ranking
	- Limit account creation to one account in 24 hours per IP address
	- Fixed error message when uploading VN images larger than 500kB
	- Fixed 3 grammar mistakes related to singular/plural
	- Don't show hidden release relations on producer pages
	- Hide the vote dropdown on v+ pages when the VN is already on the wishlist
	- Don't search for the ADV category when searching for the Game Boy Advance
	- Keep VN relations on r+ pages ordered by title
	- VN search doesn't match on titles of older release revisions anymore
	- Don't forget to update the vn.c_* columns when hiding/unhiding a release
	- Fixed month display on VNBrowse
	- VN search also matches on original title field of the vn entry

2.1 - 2008-12-29
	- Skin support
	- 'show all items' tab to large forms
	- Allow items to be selected using the mouse on the dropdown search
	- [spoiler] tag produces mouseover-style spoilers instead of ROT13
	- Fixed tiny timezone-related bug
	- Re-added release list dropdown on VN pages
	- Added [quote] tag to bb2html
	- fixed URL parser in bb2html

2.0 - 2008-12-20
	- New layout
	- Massive code rewrite:
	  - Switched to YAWF
	  - Removed template system
	  - Split DB functions in several files
	  - Converted absolute paths to be relative to the root directory
	- Database changes:
	  - Added caching of edit and vote counts in users.c_votes and .c_changes
	  - Split users.flags into users.show_nsfw and .show_list (boolean type)